@@ -4,8 +4,8 @@ Edges: 7
 Directed: 0
 0 0
 0 1
-0 2
 0 1
+0 2
 1 3
 2 2
 2 3
