@@ -6,8 +6,8 @@ Directed: 0
 0 1
 0 2
 1 3
-2 4
 2 3
+2 4
 3 5
 4 5
 Warning: unknown attribute key in GraphML file, ignoring attribute
@@ -18,7 +18,7 @@ Directed: 0
 0 1
 0 2
 1 3
-2 4
 2 3
+2 4
 3 5
 4 5
