@@ -2,8 +2,8 @@
 1 2
 1 3
 1 4
-2 4
 2 3
+2 4
 3 4
 
 
